# pyEntrez

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test.yml
docs/: conf.py  index.rst  modules.rst  pyentrez.entrez.rst  pyentrez.rst  pyentrez.utils.rst  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_modules/: modules.rst  pyentrez.db.rst  pyentrez.main.rst  pyentrez.rst  pyentrez.utils.rst
docs/source/_templates/: badges.html  github.html  moreinfo.html
src/pyentrez/: __init__.py  __main__.py  entrez_scraper.py  exceptions.py
src/pyentrez/config/: default_config.yaml
src/pyentrez/data/: entrez.json  stringlist.json
src/pyentrez/db/: __init__.py  mongo_entrez.py
src/pyentrez/db/db_files/: test_data.json
src/pyentrez/main/: __init__.py  cli.py  cmd_entrez.py  cmdline.py  entrez_manager.py  fetch_screen.py  review_screen.py  screen_manager.py  settings_screen.py  user_cred.py
src/pyentrez/settings/: my_settings.yaml
src/pyentrez/utils/: __init__.py  envars.py  logger_utils.py  logic.py  pathloc.py  string_utils.py  variables.py
styles/: file-structure.toml  isort.toml  styleguide.toml
tests/fixtures/config/: core_config.yaml
tests/fixtures/data/: stringlist.json
tests/integrated/: settings_test.py
tests/unit/: conftest.py  test_cmdline.py  test_fetch_screen.py  test_main.py  test_user_cred.py
